--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<!--Done By,Samanvitha Matta,G01252738-->
+<!--Contributers-->
+<!--Samanvitha Matta,G01252738-->
 <!--Akshaya Reddy Dundigalla,G01482843-->
 <!--Tarun Naga Sai Chadaram,G01445928-->
+
 <!--This the main index page for the assignment 2 ,where all the contents of the form will be together with a few form vaildations part-->>
 <!--Bootstrap-styled survey form for the computer science department with fields for name, address, contact information, and feedback,JavaScript manages the following features: form submission, reset functionality, interactive user feedback, and raffle validation using a randomized winning number-->
 <!DOCTYPE html>
@@ -75,6 +77,13 @@
             font-weight: lighter;
         }
 
+        h6 {
+            color: #006633;
+            text-align: center;
+            margin: 20px 0;
+            font-weight: bold;
+        }
+
         .form-legend {
             font-weight: normal;
             font-size: 1rem; 
@@ -112,6 +121,7 @@
         }
 
 
+
     </style>
 </head>
 <body>
@@ -139,10 +149,10 @@
     <div class="container mt-5">
         <!-- Survey Form -->
         <h2>Computer Science Department Survey</h2>
-        <p1>BY<br></p1>
-        <p1>Samanvitha Matta,G01252738<br></p1>
-        <p1>Akshaya Reddy Dundigalla,G01482843<br></p1>
-        <p1>Tarun Naga Sai Chadaram,G01445928<br></p1>
+        <h6>--Contributers--</h6>
+        <h6>Samanvitha Matta,G01252738</h6>
+        <h6>Akshaya Reddy Dundigalla,G01482843</h6>
+        <h6>Tarun Naga Sai Chadaram,G01445928</h6>
 
         <!-- Image of the GMU Building -->
         <img src="Mason.jpg" alt="George Mason University Building" class="mason-image">
