--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
             font-weight: lighter;
         }
 
+        h6 {
+            color: #006633;
+            text-align: center;
+            margin: 20px 0;
+            font-weight: bold;
+        }
+
         .form-legend {
             font-weight: normal;
             font-size: 1rem; 
