--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
     <div class="container mt-5">
         <!-- Survey Form -->
         <h2>Computer Science Department Survey</h2>
-        <p1>BY<br></p1>
-        <p1>Samanvitha Matta,G01252738<br></p1>
-        <p1>Akshaya Reddy Dundigalla,G01482843<br></p1>
-        <p1>Tarun Naga Sai Chadaram,G01445928<br></p1>
+        <h6>BY<br></h6>
+        <h6>Samanvitha Matta,G01252738</h6>
+        <h6>Akshaya Reddy Dundigalla,G01482843</h6>
+        <h6>Tarun Naga Sai Chadaram,G01445928</h6>
 
         <!-- Image of the GMU Building -->
         <img src="Mason.jpg" alt="George Mason University Building" class="mason-image">
